# compute-club-fork

./: .gitignore  README.md
chai_research/: .gitignore  README.md  docker-compose.yml  requirements.txt  run_script.sh
chai_research/docker/: Dockerfile  docker-compose.yml  requirements.txt
chai_research/eval/: .env.template  .gitignore  Dockerfile  README.md  Untitled.ipynb  docker-compose.yml  gen_judgment.py  gen_model_answer.py  judge_prompts.jsonl  question.jsonl  requirements.txt  run-script.sh  run.sh
chai_research/lmgym/: .env.template  .gitignore  README.md  requirements.txt
chai_research/lmgym/clm_models/: chai_data_prep.sh  prepare_chai_data.py  requirements.txt  train.py
chai_research/lmgym_train/: Dockerfile
chai_research/notebooks/: InteractWithGPTJ.ipynb  clustering_reviews.ipynb
chai_research/notebooks/scraping/: LICENSE  README.md  chai-apple-app-store-reviews_4706.csv  chai-google-play-store-reviews_9434.csv  pyproject.toml  scrape_google_play_store.py
chai_research/qlora/: .gitignore  README.md  finetune-gptj-qlora.ipynb  finetune_with_qlora.py  requirements.txt
chai_research/qlora/experiments/: example.yaml  qlora_llama2.yaml
chai_research/scripts/evaluate/: test.py
chai_research/src/utils/: retrieve_and_collate_data.py
data_exploration/: README.md  pyproject.toml  word_frequency.ipynb
data_exploration/notebooks/: nomic_atlas.ipynb  profanity_detection.ipynb  topic_modelling_lda.ipynb  word_frequency.ipynb
datasets/: .env.template  README.md  generate_synthetic_dataset.py  generator.py  requirements.txt  utils.py
datasets/experiments/: 100_example_conversations.yaml  generate_large_set.yaml
filtering/: LanguageIdentification.py  ProfanityPredictor.py  README.md  demo.ipynb  pyproject.toml
scraping/: README.md  scrape_apple_app_store.py
(+15 files in other folders)
