[tool.poetry]
name = "data-exploration"
version = "0.1.0"
description = ""
authors = ["Rami Rustom <ramirustom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
nltk = "^3.8.1"
seaborn = "^0.12.2"
gensim = "^4.3.1"
spacy = "^3.6.0"
pyldavis = "^3.4.1"
nomic = "^2.0.5"
datasets = "^2.13.1"
alt-profanity-check = "^1.2.2"
profanity-check = "^1.0.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
