[tool.poetry]
name = "scrape-reviews"
version = "0.1.0"
description = ""
authors = ["Rami Rustom <ramirustom@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scrape_reviews"}]

[tool.poetry.dependencies]
python = "^3.11"
app-store-scraper = "^0.3.5"
numpy = "^1.25.0"
pandas = "^2.0.2"
google-play-scraper = "^1.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
